TAF: added possibility of choosing environment

--- a/src/main/resources/config/generalConfig.properties
+++ b/src/main/resources/config/generalConfig.properties
@@ -1,9 +1,9 @@
 # General:
-app.name= Report Portal
+app.name=Report Portal
+app.env=qa
 
 # Urls
-app.base.page=http://localhost:8080
-app.login.page=http://localhost:8080/ui/#login
+app.login.page=%s/ui/#login
 
 # Browser
 app.config.browser=chrome
@@ -12,7 +12,3 @@ app.config.browser=chrome
 selenium.chromedriver.version=
 selenium.geckodriver.version=
 selenium.wait.page.load=10
-
-#Users
-app.users.superuser.name=superadmin
-app.users.superuser.password=erebus
