--- a/src/main/resources/config/generalConfig.properties
+++ b/src/main/resources/config/generalConfig.properties
@@ -11,4 +11,5 @@ app.config.browser=chrome
 # Drivers
 selenium.chromedriver.version=
 selenium.geckodriver.version=
-selenium.wait.page.load=10
+selenium.wait.page.load=30
+selenium.wait.polling.interval=200
