TAF: added thread safe driver/factory

--- a/src/main/resources/config/generalConfig.properties
+++ b/src/main/resources/config/generalConfig.properties
@@ -1,15 +1,17 @@
-# General:
+## General:
 app.name=Report Portal
 app.env=qa
 
-# Urls
-app.login.page=%s/ui/#login
+## Urls
+app.api.base.url=%s/api/v1/
+app.login.page.url=%s/ui/#login
 
-# Browser
+## Browser
 app.config.browser=chrome
 
-# Drivers
-selenium.chromedriver.version=
-selenium.geckodriver.version=
+## Drivers
+selenium.chrome.version=
+selenium.firefox.version=
+selenium.browser.timeout=5
 selenium.wait.page.load=30
 selenium.wait.polling.interval=200
