--- a/src/main/resources/config/qa.properties
+++ b/src/main/resources/config/qa.properties
@@ -1,6 +1,9 @@
-# Urls
-app.base.page=http://localhost:8080
+## Urls
+app.base.page.url=http://localhost:8080
 
-#Users
+## Users
 app.users.superuser.name=superadmin
 app.users.superuser.password=erebus
+#
+app.users.default.name=default
+app.users.default.password=1q2w3e
