--- a/src/main/resources/config/web.properties
+++ b/src/main/resources/config/web.properties
@@ -1,6 +1,6 @@
-# Urls
-app.base.page=https://rp.epam.com
+## Urls
+app.base.page.url=https://rp.epam.com
 
-#Users
+## Users
 app.users.superuser.name=aliaksei_kazak@epam.com
 app.users.superuser.password=
