TAF: added ui tests

--- a/src/main/resources/config/web.properties
+++ b/src/main/resources/config/web.properties
@@ -4,3 +4,4 @@ app.base.page.url=https://rp.epam.com
 ## Users
 app.users.superuser.name=aliaksei_kazak@epam.com
 app.users.superuser.password=
+app.users.superuser.token=
