TAF: added general dashboard ui tests

--- a/src/main/resources/config/web.properties
+++ b/src/main/resources/config/web.properties
@@ -5,3 +5,7 @@ app.base.page.url=https://rp.epam.com
 app.users.superuser.name=aliaksei_kazak@epam.com
 app.users.superuser.password=
 app.users.superuser.token=
+#
+app.users.default.name=aliaksei_kazak@epam.com
+app.users.default.password=
+app.users.default.token=
